# 24944_LunevS_ParCompNSU

f1Task/: CMakeLists.txt  howtobuild.txt  readme.md
f1Task/src/: main.cpp
tFTask3/task1/: CMakeLists.txt  build.sh  main.cpp
wFTask2/task1/: CMakeLists.txt  benchmark_results.txt  build.sh  main.cpp  summary.txt
wFTask2/task2/: CMakeLists.txt  build.sh  main.cpp
wFTask2/task3/: CMakeLists.txt  build.sh  mod1.cpp  mod1_.cpp  mod2.cpp  mod3.cpp
